@@ -822,7 +822,7 @@ static char *InvertHelp[] = {
 
 static char *MaskboxHelp[] = {
     "NAME",
-    "    masklonlatbox, maskindexbox - Masks a box",
+    "    masklonlatbox, maskindexbox - Mask a box",
     "",
     "SYNOPSIS",
     "    masklonlatbox,lon1,lon2,lat1,lat2  ifile ofile",
@@ -843,6 +843,42 @@ static char *MaskboxHelp[] = {
     "                   then that of the right edge.",
     "",
     "PARAMETER",
+    "    lon1  FLOAT    Western longitude",
+    "    lon2  FLOAT    Eastern longitude",
+    "    lat1  FLOAT    Southern or northern latitude",
+    "    lat2  FLOAT    Northern or southern latitude",
+    "    idx1  INTEGER  Index of first longitude",
+    "    idx2  INTEGER  Index of last longitude",
+    "    idy1  INTEGER  Index of first latitude",
+    "    idy2  INTEGER  Index of last latitude",
+    NULL
+};
+
+static char *SetboxHelp[] = {
+    "NAME",
+    "    setclonlatbox, setcindexbox - Set a box to constant",
+    "",
+    "SYNOPSIS",
+    "    setclonlatbox,c,lon1,lon2,lat1,lat2  ifile ofile",
+    "    setcindexbox,c,idx1,idx2,idy1,idy2  ifile ofile",
+    "",
+    "DESCRIPTION",
+    "    Sets a box of the rectangular understood field to a constant value. ",
+    "    The elements outside the box are untouched, the elements inside are ",
+    "    set to the given constant. All input fields must have the same ",
+    "    horizontal grid.",
+    "",
+    "OPERATORS",
+    "    setclonlatbox  Set a longitude/latitude box to constant",
+    "                   Sets the values of a longitude/latitude box to a constant value. The ",
+    "                   user has to give the longitudes and latitudes of the edges of the box.",
+    "    setcindexbox   Set an index box to constant",
+    "                   Sets the values of an index box to a constant value. The user has to ",
+    "                   give the indexes of the edges of the box. The index of the left edge ",
+    "                   may be greater then that of the right edge.",
+    "",
+    "PARAMETER",
+    "    c     FLOAT    Constant",
     "    lon1  FLOAT    Western longitude",
     "    lon2  FLOAT    Eastern longitude",
     "    lat1  FLOAT    Southern or northern latitude",
